# 2d-topdown-game

./: .gitignore  AGENTS.md  README.md  pyproject.toml
assets/maps/ashland_map/: layer1.py  layer2.py  layer3.py
assets/tilesets/ashland/: ashland_a1_manifest.py  ashland_a5_manifest.py  ashland_b_manifest.py
save/: profile.json
src/game/: run.py  settings.py
src/game/active_abilities/: __init__.py  ability_catalog.py  ability_effects.py  ability_runtime.py
src/game/audio/: __init__.py  audio_assets.py  audio_manager.py
src/game/core/: app_state.py  blessings.py  encyclopedia.py  enemies.py  enemy_catalog.py  enhancements.py  game.py  gameloop.py  lobby.py  profile.py  profile_store.py  run_result.py  session_state.py  snapshot.py  upgrades.py  world.py
src/game/entities/: __init__.py  blessing.py  coin.py  enemy.py  entity.py  player.py  projectile.py
src/game/input/: __init__.py  actions.py  gameplay_input.py  input_handler.py  menu_actions.py  menu_input_handler.py  session_actions.py
src/game/render/: __init__.py  blessings.py  camera.py  characters.py  effects.py  enemies.py  fixed_map.py  fonts.py  map_loader.py  renderer.py  spritesheet.py  tiles.py  upgrades.py
src/game/serialization/: __init__.py
src/game/systems/: __init__.py  blessings.py  collision.py  combat.py  enemy_director.py  navigation.py  spawner.py
src/game/ui/: __init__.py  enhancement_menu.py  game_over_menu.py  hud.py  lobby_menu.py  logbook_menu.py  main_menu.py  pause_menu.py  settings_menu.py  shop_menu.py  widgets.py
src/runner2d/: __init__.py
(+7 files in other folders)
